--- a/client/static/client/css/reports.css
+++ b/client/static/client/css/reports.css
@@ -1,4 +1,4 @@
-@import url("client/css/navbar.css");
+@import url("navbar.css");
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 body {
     font-family: 'Manrope', sans-serif;
