--- a/client/templates/client/client_base.html
+++ b/client/templates/client/client_base.html
@@ -20,16 +20,19 @@
         {% endblock %}
     </div>
 
-    <div id="logout-modal" class="modal">
-        <div class="modal-content">
-            <h2>Are you sure you want to log out?</h2>
+    <div id="logout-modal" class="logout_modal">
+        <div class="logout_modal_content">
+            <h2 class="logout_title">Are you sure you want to log out?</h2>
             <form method="POST" action="{% url 'log_out' %}">
                 {% csrf_token %}
-                <button type="submit" class="confirm-logout">Yes, Log Out</button>
-                <button type="button" id="cancel-logout" class="cancel-logout">Cancel</button>
+                <div class="logout_button_group">
+                    <button type="submit" class="confirm-logout">Yes, Log Out</button>
+                    <button type="button" id="cancel-logout" class="cancel-logout">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
+    
 
     <script src="{% static 'client/js/log_out.js' %}"></script>
 </body>
