--- a/users/static/users/css/styles.css
+++ b/users/static/users/css/styles.css
@@ -88,45 +88,72 @@ body {
     border-radius: 8px; /* Soft rounded corners */
 }
 
-.logout {
-    list-style: none;
-    position: absolute;  /* Positions it relative to the sidebar */
-    bottom: 20px;
-    padding: 0;
-    left: 15px; /* Aligns it properly */
-    margin-top: 250px;
-    padding-left: 0px;
-    opacity: 0; /* Hide item */
-    transition: opacity 0.3s ease-in-out;
+/*---------------LOG OUT------------*/
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: center;
 }
 
-.sidebar:hover .logout {
-    opacity: 1; /* Show item on hover */
+.modal-content {
+    background-color: white;
+    color: #F24505;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 300px;
 }
 
-.logout a {
-    text-decoration: none;
-    color: white;
+
+.confirm-logout, .cancel-logout {
+    margin: 10px;
+    padding: 12px 20px;
+    border: 2px solid #F24505;
+    background-color: transparent;
+    color: #F24505;
     font-size: 16px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.confirm-logout:hover, .cancel-logout:hover {
+    background-color: #F24505;
+    color: white;
+}
+
+
+
+.nav-links .icon {
+    width: 20px;
+    height: 20px;
+    font-size: 20px; 
+    color: white;
     display: flex;
     align-items: center;
-    gap: 10px;
+    justify-content: center;
+}
+
+.nav-links a {
+    display: flex;
+    align-items: center;
+    gap: 10px; 
     white-space: nowrap;
 }
 
-.logout a:hover {
-    width: 225px;
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    white-space: nowrap;
-    opacity: 1;
-    padding: 15px 0px;
-    background-color: rgba(255, 255, 255, 0.15); /* Light transparent white */
-    border-radius: 8px; /* Soft rounded corners */
+.nav-links .fa-solid {
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    line-height: 1;
 }
 
 .icon {
