--- a/users/static/users/css/userModules.css
+++ b/users/static/users/css/userModules.css
@@ -101,6 +101,7 @@ body {
 .module-card:nth-child(even) {
     background: #0148FD;
     border-left: 5px solid #012EAB;
+    color: #eeebeb;
 }
 
 .module-card h3 {
@@ -165,7 +166,6 @@ transition: width 0.5s ease-in-out;
 .progress-text {
 font-size: 12px;
 font-weight: bold;
-color: #333;
 white-space: nowrap;
 text-align: right;
 }
