--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -18,7 +18,7 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'userModules' %}" class="{% if request.path == '/modules/' %}active{% endif %}">
+            <a href="{% url 'userModules' %}" class="{% if request.path == '/userModules/' %}active{% endif %}">
                 <img src="{% static 'users/img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
