--- a/users/static/users/css/questionnaire.css
+++ b/users/static/users/css/questionnaire.css
@@ -299,7 +299,7 @@ body {
 
 /* Buttons */
 .confirm-logout {
-    background-color: #dc3545;
+    background-color: #f24505;
     color: white;
     margin-right: 10px;
 }
