Fix css in manage exercises page.

--- a/client/static/client/css/Manage_Questionnaires.css
+++ b/client/static/client/css/Manage_Questionnaires.css
@@ -19,7 +19,7 @@ body {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
-    color: #000000;
+    color: #2b2320;
 }
 
 /* Table Styling */
