--- a/client/static/client/css/edit_section_style.css
+++ b/client/static/client/css/edit_section_style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 .content {
     padding: 20px;
     max-width: 900px;
