--- a/client/static/client/css/module_style.css
+++ b/client/static/client/css/module_style.css
@@ -7,6 +7,8 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    font-size: 20px;
+    color: #2b2320;
 }
 
 /* Full Page Content */
@@ -21,8 +23,8 @@ body {
     font-weight: bold;
     margin-bottom: 20px;
     padding-left: 20px;
-    color: #FD5402;
-    border-left: 5px solid #FD5402;
+    color: #F24505;
+    border-left: 5px solid #F24505;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -35,19 +37,24 @@ body {
 }
 
 .add-btn {
-    background-color: #FD5402;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
     font-size: 16px;
-    font-weight: bold;
-    border-radius: 20px;
-    transition: background 0.3s, transform 0.2s;
+  padding: 10px 14px;
+  background-color: #F24505;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+  font-weight: bold;
+  font-family: 'Manrope';
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  border: 2px solid #ffffff;
 }
 
 .add-btn:hover {
-    background: #e04e00;
-    transform: scale(1.05);
+    background: #D43802;
+  color: white;
 }
 
 /* Module List */
@@ -98,25 +105,30 @@ body {
 }
 
 .edit-btn {
-    background-color: #FD5402;
-    color: white;
-    padding: 8px 12px;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 20px;
-    transition: background 0.3s, transform 0.2s;
+    font-size: 16px;
+  padding: 10px 14px;
+  background-color: #F24505;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+  font-weight: bold;
+  font-family: 'Manrope';
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  border: 2px solid #ffffff;
 }
 
 .edit-btn:hover {
-    background: #e04e00;
-    transform: scale(1.05);
+    background: #D43802;
+  color: white;
 }
 
 /* Toggle Button */
 .toggle-btn {
     background: none;
-    color: #FD5402;
+    color: #F24505;
     border: none;
     font-size: 18px;
     cursor: pointer;
